Acrescenta imagem de profile

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <img alt="Busca" class="s4Iyt" color="#262626" fill="#262626" height="22" role="img" viewBox="0 0 48 48" width="22" src="images/magnify-glass.png">
         <img alt="Reels" class="s4Iyt" color="#262626" fill="#262626" height="22" role="img" viewBox="0 0 48 48" width="22" src="images/reels.png">
         <img alt="Loja" class="s4Iyt" color="#262626" fill="#262626" height="22" role="img" viewBox="0 0 48 48" width="22" src="images/icon shop.svg">
+        <img alt="Loja" class="s4Iyt" color="#262626" fill="#262626" height="22" role="img" viewBox="0 0 48 48" width="22" src="images/profile.jpg">
     </footer>
 </body>
 </html>
