Atualizaçao de codigo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UFT8">
     <title> Instagram</title>
-    <link rel="sortcut icon" href="images/instagram.ico" type="image/x-icon" />
+    <link rel="sortcut icon" href="images/instagram.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="insta">
