Insere reset.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UFT8">
     <title> Instagram</title>
     <link rel="sortcut icon" href="images/icons/instagram.ico" type="image/x-icon">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="insta">
@@ -17,11 +18,28 @@
         </section>
     </header>
     <section class="story">
-        <img class="story-image" data-title="usuario" src="images/profile.jpg">
-        <img class="story-image" src="images/user1.jpeg" >
-        <img class="story-image" src="images/user2.jpeg">
-        <img class="story-image" src="images/user3.jpeg">
-        <img class="story-image" src="images/user4.jpeg">
+        <figure>
+            <img class="story-image" data-title="usuario" src="images/profile.jpg">
+            <figcaption>Meu Perfil</figcaption>
+        </figure>
+
+        <figure>
+            <img class="story-image" src="images/user1.jpeg" >
+            <figcaption>Ada</figcaption>
+        </figure>
+        
+        <figure>
+            <img class="story-image" src="images/user2.jpeg">
+            <figcaption>Bertho</figcaption>
+        </figure>
+
+        <figure>
+            <img class="story-image" src="images/user3.jpeg">    <figcaption>Maria Antonia</figcaption>
+        </figure>
+        
+        <figure>
+            <img class="story-image" src="images/user4.jpeg">    <figcaption>Avocato</figcaption>
+    </figure>
     </section>
 
     <main>
